# open-sourced-nootbookLM

./: README.md
podcast_creator/: README.md  pyproject.toml
podcast_creator/podcast_creator/: main.py
